Fix #59